packages/next-swc/crates/core/tests/errors/next-font-downloaders/not-ident/input.js
import { Inter } from '@next/google-fonts'

const { a } = Inter({
  variant: '400',
})

const [b] = Inter({
  variant: '400',
})

const { e } = {}
